向下兼容JDK 8和Spring Boot 2.x，重构Redis储存方案，支持Redis集群